ex: correct description of device used to get timings

--- a/examples/Quantum Circuit Example.ipynb
+++ b/examples/Quantum Circuit Example.ipynb
@@ -373,7 +373,7 @@
     "\n",
     "Note again that 'flops' defined here assumes real data (as per `opt_einsum` convention), the 'cost' or number of scalar operations, $C$, is generally half this, whereas for quantum circuits with complex tensors, the real FLOPs will be 4x.\n",
     "\n",
-    "We can also actually perform the contraction. (The efficiency of of imbalanced contractions is quite bad for `numpy` and I'm running this example via WSL on a laptop so take actual timing with a large pinch of salt)."
+    "We can also actually perform the contraction (this is using a Nvidia Quadro M4000):"
    ]
   },
   {
