add jax ex, update readme, for ContractionTree.contract() usage

--- a/examples/Example - Reproducing 2103-03074.ipynb
+++ b/examples/Example - Reproducing 2103-03074.ipynb
@@ -115,7 +115,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tree = opt.best['tree']"
+    "tree = opt.get_tree()"
    ]
   },
   {
