--- a/examples/Quantum Circuit Example.ipynb
+++ b/examples/Quantum Circuit Example.ipynb
@@ -310,7 +310,7 @@
     }
    ],
    "source": [
-    "tree = opt.best['tree']\n",
+    "tree = opt.get_tree()\n",
     "tree.plot_ring(node_scale= 1 / 3, edge_scale=2 / 3)"
    ]
   },
@@ -605,7 +605,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tree = opt.best['tree']\n",
+    "tree = opt.get_tree()\n",
     "tree.plot_ring(node_scale=1 / 3, edge_scale=2 / 3)"
    ]
   },
