--- a/examples/Example - Reproducing 2005.06787.ipynb
+++ b/examples/Example - Reproducing 2005.06787.ipynb
@@ -130,7 +130,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tree = opt.best['tree']"
+    "tree = opt.get_tree()"
    ]
   },
   {
