reusable optimizers: allow directory=True for auto generated cache

--- a/docs/basics.ipynb
+++ b/docs/basics.ipynb
@@ -581,6 +581,17 @@
   },
   {
    "cell_type": "markdown",
+   "id": "45f14770",
+   "metadata": {},
+   "source": [
+    "If you supply `directory=True` then the cache name will be generated from a \n",
+    "hash of the relevant path finding options supplied to the optimizer, meaning \n",
+    "you don't need to manually change the name in order to use different caches \n",
+    "for different settings. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "d9c6309b",
    "metadata": {},
    "source": [
