add high level interface docs

--- a/docs/basics.ipynb
+++ b/docs/basics.ipynb
@@ -13,7 +13,7 @@
    "id": "ebe10c20-484e-4299-bd2d-255724be621b",
    "metadata": {},
    "source": [
-    "This page describes the basic ways to set up a contraction and an optimizer and defines some common terms.\n",
+    "This page describes the basic ways to set up a contraction and an explicit optimizer and defines some common terms.\n",
     "The focus of `cotengra` is *exact contraction*. That is, taking a collection of tensors with indices described by a tensor network or einsum equation and then:\n",
     "\n",
     "1. finding the best sequence of pairwise contractions that reduces them to a single output tensor\n",
