einsum funcs: support interleaved & ellipsis

--- a/docs/high-level-interface.ipynb
+++ b/docs/high-level-interface.ipynb
@@ -76,8 +76,9 @@
     "- ``\"Xab,Xbc->Xac\"`` batch matrix multiplication\n",
     "- ``\"ab,ab->ab\"`` hadamard (elementwise) product \n",
     "\n",
-    "```{warning}\n",
-    "Whilst `cotengra` supports all types of explicit equation (such as repeated and hyper/batch indices appearing any number of times) broadcasting with ellipses (`...`) is not yet supported.\n",
+    "```{hint}\n",
+    "`cotengra` supports all types of explicit equation (such as repeated and hyper/batch indices appearing any number of times).\n",
+    "The `einsum` versions also support automatically expanded dimensions using ellipsis ``...``.\n",
     "```\n",
     "\n",
     "If the right hand side is not specified then the output indices are computed as every index that appears *once* on the left hand side inputs, in sorted order. For example ``'ba'`` is completed as a transposition: ``'ba->ab'``.\n",
@@ -110,7 +111,7 @@
     "print(eq)\n",
     "\n",
     "# make example arrays\n",
-    "arrays = ctg.utils.make_arrays_from_inputs(inputs, size_dict, seed=42)"
+    "arrays = ctg.utils.make_arrays_from_inputs(inputs, size_dict, seed=42)\n"
    ]
   },
   {
@@ -137,7 +138,7 @@
     }
    ],
    "source": [
-    "ctg.einsum(eq, *arrays)"
+    "ctg.einsum(eq, *arrays)\n"
    ]
   },
   {
@@ -167,7 +168,7 @@
     "tree = ctg.einsum_tree(eq, *shapes)\n",
     "\n",
     "# some typical quantities of interest:\n",
-    "tree.contract_stats()"
+    "tree.contract_stats()\n"
    ]
   },
   {
@@ -2845,7 +2846,7 @@
     }
    ],
    "source": [
-    "tree.plot_rubberband()"
+    "tree.plot_rubberband()\n"
    ]
   },
   {
@@ -2873,7 +2874,7 @@
    ],
    "source": [
     "expr = ctg.einsum_expression(eq, *shapes)\n",
-    "expr(*arrays)"
+    "expr(*arrays)\n"
    ]
   },
   {
@@ -2894,7 +2895,7 @@
    ],
    "source": [
     "arrays = ctg.utils.make_arrays_from_inputs(inputs, size_dict, seed=43)\n",
-    "expr(*arrays)"
+    "expr(*arrays)\n"
    ]
   },
   {
@@ -4959,7 +4960,7 @@
     "\n",
     "tn = qtn.TN_rand_reg(100, 3, D=2, seed=42)\n",
     "tn.draw(edge_color=True)\n",
-    "tn"
+    "tn\n"
    ]
   },
   {
@@ -4981,7 +4982,7 @@
     "inputs = []\n",
     "for t in tn:\n",
     "    arrays.append(t.data)\n",
-    "    inputs.append(t.inds)"
+    "    inputs.append(t.inds)\n"
    ]
   },
   {
@@ -5013,7 +5014,7 @@
     }
    ],
    "source": [
-    "inputs[:5]"
+    "inputs[:5]\n"
    ]
   },
   {
@@ -5049,7 +5050,7 @@
    ],
    "source": [
     "%%time\n",
-    "ctg.array_contract(arrays, inputs, optimize='auto-hq')"
+    "ctg.array_contract(arrays, inputs, optimize='auto-hq')\n"
    ]
   },
   {
@@ -5086,7 +5087,7 @@
    ],
    "source": [
     "%%time\n",
-    "ctg.array_contract(arrays, inputs, optimize='auto-hq')"
+    "ctg.array_contract(arrays, inputs, optimize='auto-hq')\n"
    ]
   },
   {
@@ -5117,7 +5118,7 @@
    ],
    "source": [
     "symbol_map = ctg.get_symbol_map(inputs)\n",
-    "[symbol_map[ind] for ind in t.inds]"
+    "[symbol_map[ind] for ind in t.inds]\n"
    ]
   }
  ],
