--- a/docs/trees.ipynb
+++ b/docs/trees.ipynb
@@ -40,11 +40,11 @@
        "  <rdf:RDF xmlns:dc=\"http://purl.org/dc/elements/1.1/\" xmlns:cc=\"http://creativecommons.org/ns#\" xmlns:rdf=\"http://www.w3.org/1999/02/22-rdf-syntax-ns#\">\n",
        "   <cc:Work>\n",
        "    <dc:type rdf:resource=\"http://purl.org/dc/dcmitype/StillImage\"/>\n",
-       "    <dc:date>2024-02-15T17:55:39.544353</dc:date>\n",
+       "    <dc:date>2024-02-26T16:10:39.573258</dc:date>\n",
        "    <dc:format>image/svg+xml</dc:format>\n",
        "    <dc:creator>\n",
        "     <cc:Agent>\n",
-       "      <dc:title>Matplotlib v3.8.2, https://matplotlib.org/</dc:title>\n",
+       "      <dc:title>Matplotlib v3.8.3, https://matplotlib.org/</dc:title>\n",
        "     </cc:Agent>\n",
        "    </dc:creator>\n",
        "   </cc:Work>\n",
@@ -70,7 +70,7 @@
        "C 123.175937 134.275114 127.977117 126.367395 130.667474 122.728397 \n",
        "C 133.35783 119.089399 139.5105 112.180853 141.428901 108.172405 \n",
        "Q 143.495081 103.855175 146.367931 89.311842 \n",
-       "\" clip-path=\"url(#p05d3ecd740)\" style=\"fill: none; stroke: #4ee480; stroke-width: 1.584963; stroke-linejoin: miter; stroke-linecap: round\"/>\n",
+       "\" clip-path=\"url(#p100e24e91c)\" style=\"fill: none; stroke: #4ee480; stroke-width: 1.584963; stroke-linejoin: miter; stroke-linecap: round\"/>\n",
        "   </g>\n",
        "   <g id=\"text_1\">\n",
        "    <!-- d -->\n",
@@ -112,7 +112,7 @@
        "C 110.179653 124.666799 116.332323 117.758253 119.02268 114.119256 \n",
        "C 121.713037 110.480258 126.514217 102.572538 129.784107 99.563264 \n",
        "Q 133.305887 96.322176 146.367931 89.311842 \n",
-       "\" clip-path=\"url(#p05d3ecd740)\" style=\"fill: none; stroke: #84e198; stroke-width: 1.584963; stroke-linejoin: miter; stroke-linecap: round\"/>\n",
+       "\" clip-path=\"url(#p100e24e91c)\" style=\"fill: none; stroke: #84e198; stroke-width: 1.584963; stroke-linejoin: miter; stroke-linecap: round\"/>\n",
        "   </g>\n",
        "   <g id=\"text_2\">\n",
        "    <!-- n -->\n",
@@ -144,7 +144,7 @@
        "   <g id=\"line2d_1\">\n",
        "    <path d=\"M 146.367931 89.311842 \n",
        "L 213.015443 53.55595 \n",
-       "\" clip-path=\"url(#p05d3ecd740)\" style=\"fill: none; stroke: #d5bf35; stroke-linecap: round\"/>\n",
+       "\" clip-path=\"url(#p100e24e91c)\" style=\"fill: none; stroke: #d5bf35; stroke-linecap: round\"/>\n",
        "   </g>\n",
        "   <g id=\"text_3\">\n",
        "    <!-- l -->\n",
@@ -172,7 +172,7 @@
        "   <g id=\"line2d_2\">\n",
        "    <path d=\"M 146.367931 89.311842 \n",
        "L 81.236729 83.844711 \n",
-       "\" clip-path=\"url(#p05d3ecd740)\" style=\"fill: none; stroke: #dee363; stroke-linecap: round\"/>\n",
+       "\" clip-path=\"url(#p100e24e91c)\" style=\"fill: none; stroke: #dee363; stroke-linecap: round\"/>\n",
        "   </g>\n",
        "   <g id=\"text_4\">\n",
        "    <!-- f -->\n",
@@ -209,7 +209,7 @@
        "C 135.163758 72.602453 128.493096 68.568802 125.422641 66.307329 \n",
        "C 122.352185 64.045857 116.521413 58.871867 113.140817 57.261438 \n",
        "Q 109.499803 55.526952 97.240637 53.128275 \n",
-       "\" clip-path=\"url(#p05d3ecd740)\" style=\"fill: none; stroke: #5db6d5; stroke-linejoin: miter; stroke-linecap: round\"/>\n",
+       "\" clip-path=\"url(#p100e24e91c)\" style=\"fill: none; stroke: #5db6d5; stroke-linejoin: miter; stroke-linecap: round\"/>\n",
        "   </g>\n",
        "   <g id=\"text_5\">\n",
        "    <!-- c -->\n",
@@ -246,7 +246,7 @@
        "C 127.087154 83.568251 121.256383 78.394261 118.185927 76.132788 \n",
        "C 115.115471 73.871315 108.44481 69.837665 105.904103 67.086897 \n",
        "Q 103.167679 64.124228 97.240637 53.128275 \n",
-       "\" clip-path=\"url(#p05d3ecd740)\" style=\"fill: none; stroke: #3ddfb7; stroke-width: 1.584963; stroke-linejoin: miter; stroke-linecap: round\"/>\n",
+       "\" clip-path=\"url(#p100e24e91c)\" style=\"fill: none; stroke: #3ddfb7; stroke-width: 1.584963; stroke-linejoin: miter; stroke-linecap: round\"/>\n",
        "   </g>\n",
        "   <g id=\"text_6\">\n",
        "    <!-- e -->\n",
@@ -285,7 +285,7 @@
        "   <g id=\"line2d_3\">\n",
        "    <path d=\"M 146.367931 89.311842 \n",
        "L 204.637338 100.64806 \n",
-       "\" clip-path=\"url(#p05d3ecd740)\" style=\"fill: none; stroke: #5552d1; stroke-linecap: round\"/>\n",
+       "\" clip-path=\"url(#p100e24e91c)\" style=\"fill: none; stroke: #5552d1; stroke-linecap: round\"/>\n",
        "   </g>\n",
        "   <g id=\"text_7\">\n",
        "    <!-- g -->\n",
@@ -333,7 +333,7 @@
        "   <g id=\"line2d_4\">\n",
        "    <path d=\"M 146.367931 89.311842 \n",
        "L 159.038321 157.409877 \n",
-       "\" clip-path=\"url(#p05d3ecd740)\" style=\"fill: none; stroke: #ca30d8; stroke-linecap: round\"/>\n",
+       "\" clip-path=\"url(#p100e24e91c)\" style=\"fill: none; stroke: #ca30d8; stroke-linecap: round\"/>\n",
        "   </g>\n",
        "   <g id=\"text_8\">\n",
        "    <!-- m -->\n",
@@ -376,7 +376,7 @@
        "   <g id=\"line2d_5\">\n",
        "    <path d=\"M 146.367931 89.311842 \n",
        "L 165.832526 20.686825 \n",
-       "\" clip-path=\"url(#p05d3ecd740)\" style=\"fill: none; stroke: #73afe3; stroke-width: 1.584963; stroke-linecap: round\"/>\n",
+       "\" clip-path=\"url(#p100e24e91c)\" style=\"fill: none; stroke: #73afe3; stroke-width: 1.584963; stroke-linecap: round\"/>\n",
        "   </g>\n",
        "   <g id=\"text_9\">\n",
        "    <!-- o -->\n",
@@ -410,12 +410,12 @@
        "   <g id=\"line2d_6\">\n",
        "    <path d=\"M 274.632202 24.104312 \n",
        "L 213.015443 53.55595 \n",
-       "\" clip-path=\"url(#p05d3ecd740)\" style=\"fill: none; stroke: #b9e292; stroke-width: 1.584963; stroke-linecap: round\"/>\n",
+       "\" clip-path=\"url(#p100e24e91c)\" style=\"fill: none; stroke: #b9e292; stroke-width: 1.584963; stroke-linecap: round\"/>\n",
        "   </g>\n",
        "   <g id=\"line2d_7\">\n",
        "    <path d=\"M 213.015443 53.55595 \n",
        "L 204.637338 100.64806 \n",
-       "\" clip-path=\"url(#p05d3ecd740)\" style=\"fill: none; stroke: #83dec4; stroke-linecap: round\"/>\n",
+       "\" clip-path=\"url(#p100e24e91c)\" style=\"fill: none; stroke: #83dec4; stroke-linecap: round\"/>\n",
        "   </g>\n",
        "   <g id=\"text_10\">\n",
        "    <!-- h -->\n",
@@ -447,12 +447,12 @@
        "   <g id=\"line2d_8\">\n",
        "    <path d=\"M 49.387391 18.210732 \n",
        "L 81.236729 83.844711 \n",
-       "\" clip-path=\"url(#p05d3ecd740)\" style=\"fill: none; stroke: #7aacd4; stroke-linecap: round\"/>\n",
+       "\" clip-path=\"url(#p100e24e91c)\" style=\"fill: none; stroke: #7aacd4; stroke-linecap: round\"/>\n",
        "   </g>\n",
        "   <g id=\"line2d_9\">\n",
        "    <path d=\"M 81.236729 83.844711 \n",
        "L 97.240637 53.128275 \n",
-       "\" clip-path=\"url(#p05d3ecd740)\" style=\"fill: none; stroke: #9daae1; stroke-width: 1.584963; stroke-linecap: round\"/>\n",
+       "\" clip-path=\"url(#p100e24e91c)\" style=\"fill: none; stroke: #9daae1; stroke-width: 1.584963; stroke-linecap: round\"/>\n",
        "   </g>\n",
        "   <g id=\"text_11\">\n",
        "    <!-- j -->\n",
@@ -486,7 +486,7 @@
        "   <g id=\"line2d_10\">\n",
        "    <path d=\"M 97.240637 53.128275 \n",
        "L 18.767798 84.506325 \n",
-       "\" clip-path=\"url(#p05d3ecd740)\" style=\"fill: none; stroke: #c9cf89; stroke-width: 1.584963; stroke-linecap: round\"/>\n",
+       "\" clip-path=\"url(#p100e24e91c)\" style=\"fill: none; stroke: #c9cf89; stroke-width: 1.584963; stroke-linecap: round\"/>\n",
        "   </g>\n",
        "   <g id=\"text_12\">\n",
        "    <!-- k -->\n",
@@ -514,7 +514,7 @@
        "   <g id=\"line2d_11\">\n",
        "    <path d=\"M 159.038321 157.409877 \n",
        "L 169.110934 218.368511 \n",
-       "\" clip-path=\"url(#p05d3ecd740)\" style=\"fill: none; stroke: #7b94dc; stroke-linecap: round\"/>\n",
+       "\" clip-path=\"url(#p100e24e91c)\" style=\"fill: none; stroke: #7b94dc; stroke-linecap: round\"/>\n",
        "   </g>\n",
        "   <g id=\"text_13\">\n",
        "    <!-- i -->\n",
@@ -554,7 +554,7 @@
        "C 95.292673 149.665272 96.138717 151.707802 97.644474 153.213559 \n",
        "C 99.15023 154.719316 101.192761 155.56536 103.322222 155.56536 \n",
        "z\n",
-       "\" clip-path=\"url(#p05d3ecd740)\" style=\"fill: #0072b2; stroke: #004c77; stroke-linejoin: miter\"/>\n",
+       "\" clip-path=\"url(#p100e24e91c)\" style=\"fill: #0072b2; stroke: #004c77; stroke-linejoin: miter\"/>\n",
        "   </g>\n",
        "   <g id=\"patch_7\">\n",
        "    <path d=\"M 146.367931 97.341392 \n",
@@ -567,7 +567,7 @@
        "C 138.338382 91.441304 139.184426 93.483835 140.690182 94.989591 \n",
        "C 142.195939 96.495348 144.23847 97.341392 146.367931 97.341392 \n",
        "z\n",
-       "\" clip-path=\"url(#p05d3ecd740)\" style=\"fill: #a5cc64; stroke: #6e8843; stroke-linejoin: miter\"/>\n",
+       "\" clip-path=\"url(#p100e24e91c)\" style=\"fill: #a5cc64; stroke: #6e8843; stroke-linejoin: miter\"/>\n",
        "   </g>\n",
        "   <g id=\"patch_8\">\n",
        "    <path d=\"M 274.632202 32.133861 \n",
@@ -581,7 +581,7 @@
        "C 270.460209 31.287817 272.50274 32.133861 274.632202 32.133861 \n",
        "L 274.632202 32.133861 \n",
        "z\n",
-       "\" clip-path=\"url(#p05d3ecd740)\" style=\"fill: none\"/>\n",
+       "\" clip-path=\"url(#p100e24e91c)\" style=\"fill: none\"/>\n",
        "   </g>\n",
        "   <g id=\"patch_9\">\n",
        "    <path d=\"M 213.015443 61.5855 \n",
@@ -594,7 +594,7 @@
        "C 204.985893 55.685412 205.831937 57.727943 207.337694 59.233699 \n",
        "C 208.84345 60.739456 210.885981 61.5855 213.015443 61.5855 \n",
        "z\n",
-       "\" clip-path=\"url(#p05d3ecd740)\" style=\"fill: #64add6; stroke: #43738f; stroke-linejoin: miter\"/>\n",
+       "\" clip-path=\"url(#p100e24e91c)\" style=\"fill: #64add6; stroke: #43738f; stroke-linejoin: miter\"/>\n",
        "   </g>\n",
        "   <g id=\"patch_10\">\n",
        "    <path d=\"M 204.637338 108.677609 \n",
@@ -607,7 +607,7 @@
        "C 196.607789 102.777521 197.453833 104.820052 198.959589 106.325809 \n",
        "C 200.465346 107.831565 202.507877 108.677609 204.637338 108.677609 \n",
        "z\n",
-       "\" clip-path=\"url(#p05d3ecd740)\" style=\"fill: #edda7d; stroke: #9e9153; stroke-linejoin: miter\"/>\n",
+       "\" clip-path=\"url(#p100e24e91c)\" style=\"fill: #edda7d; stroke: #9e9153; stroke-linejoin: miter\"/>\n",
        "   </g>\n",
        "   <g id=\"patch_11\">\n",
        "    <path d=\"M 49.387391 26.240282 \n",
@@ -621,7 +621,7 @@
        "C 45.215399 25.394238 47.25793 26.240282 49.387391 26.240282 \n",
        "L 49.387391 26.240282 \n",
        "z\n",
-       "\" clip-path=\"url(#p05d3ecd740)\" style=\"fill: none\"/>\n",
+       "\" clip-path=\"url(#p100e24e91c)\" style=\"fill: none\"/>\n",
        "   </g>\n",
        "   <g id=\"patch_12\">\n",
        "    <path d=\"M 81.236729 91.87426 \n",
@@ -634,7 +634,7 @@
        "C 73.20718 85.974172 74.053224 88.016703 75.55898 89.52246 \n",
        "C 77.064737 91.028216 79.107268 91.87426 81.236729 91.87426 \n",
        "z\n",
-       "\" clip-path=\"url(#p05d3ecd740)\" style=\"fill: #6fb6c4; stroke: #4a7982; stroke-linejoin: miter\"/>\n",
+       "\" clip-path=\"url(#p100e24e91c)\" style=\"fill: #6fb6c4; stroke: #4a7982; stroke-linejoin: miter\"/>\n",
        "   </g>\n",
        "   <g id=\"patch_13\">\n",
        "    <path d=\"M 97.240637 61.157825 \n",
@@ -647,7 +647,7 @@
        "C 89.211087 55.257737 90.057131 57.300268 91.562888 58.806024 \n",
        "C 93.068644 60.311781 95.111175 61.157825 97.240637 61.157825 \n",
        "z\n",
-       "\" clip-path=\"url(#p05d3ecd740)\" style=\"fill: #069e75; stroke: #04694e; stroke-linejoin: miter\"/>\n",
+       "\" clip-path=\"url(#p100e24e91c)\" style=\"fill: #069e75; stroke: #04694e; stroke-linejoin: miter\"/>\n",
        "   </g>\n",
        "   <g id=\"patch_14\">\n",
        "    <path d=\"M 18.767798 92.535874 \n",
@@ -660,7 +660,7 @@
        "C 10.738249 86.635786 11.584293 88.678317 13.09005 90.184074 \n",
        "C 14.595806 91.68983 16.638337 92.535874 18.767798 92.535874 \n",
        "z\n",
-       "\" clip-path=\"url(#p05d3ecd740)\" style=\"fill: #da7709; stroke: #924f06; stroke-linejoin: miter\"/>\n",
+       "\" clip-path=\"url(#p100e24e91c)\" style=\"fill: #da7709; stroke: #924f06; stroke-linejoin: miter\"/>\n",
        "   </g>\n",
        "   <g id=\"patch_15\">\n",
        "    <path d=\"M 159.038321 165.439426 \n",
@@ -673,7 +673,7 @@
        "C 151.008771 159.539338 151.854815 161.581869 153.360572 163.087625 \n",
        "C 154.866329 164.593382 156.908859 165.439426 159.038321 165.439426 \n",
        "z\n",
-       "\" clip-path=\"url(#p05d3ecd740)\" style=\"fill: #d29074; stroke: #8c604d; stroke-linejoin: miter\"/>\n",
+       "\" clip-path=\"url(#p100e24e91c)\" style=\"fill: #d29074; stroke: #8c604d; stroke-linejoin: miter\"/>\n",
        "   </g>\n",
        "   <g id=\"patch_16\">\n",
        "    <path d=\"M 165.832526 28.716374 \n",
@@ -686,7 +686,7 @@
        "C 157.802977 22.816286 158.649021 24.858817 160.154777 26.364574 \n",
        "C 161.660534 27.87033 163.703065 28.716374 165.832526 28.716374 \n",
        "z\n",
-       "\" clip-path=\"url(#p05d3ecd740)\" style=\"fill: #cc90b1; stroke: #886076; stroke-linejoin: miter\"/>\n",
+       "\" clip-path=\"url(#p100e24e91c)\" style=\"fill: #cc90b1; stroke: #886076; stroke-linejoin: miter\"/>\n",
        "   </g>\n",
        "   <g id=\"patch_17\">\n",
        "    <path d=\"M 169.110934 226.398061 \n",
@@ -699,7 +699,7 @@
        "C 161.081384 220.497973 161.927428 222.540503 163.433185 224.04626 \n",
        "C 164.938941 225.552017 166.981472 226.398061 169.110934 226.398061 \n",
        "z\n",
-       "\" clip-path=\"url(#p05d3ecd740)\" style=\"fill: #e6a922; stroke: #997116; stroke-linejoin: miter\"/>\n",
+       "\" clip-path=\"url(#p100e24e91c)\" style=\"fill: #e6a922; stroke: #997116; stroke-linejoin: miter\"/>\n",
        "   </g>\n",
        "   <g id=\"text_14\">\n",
        "    <!-- 0 -->\n",
@@ -1116,7 +1116,7 @@
        "  </g>\n",
        " </g>\n",
        " <defs>\n",
-       "  <clipPath id=\"p05d3ecd740\">\n",
+       "  <clipPath id=\"p100e24e91c\">\n",
        "   <rect x=\"7.2\" y=\"7.2\" width=\"279\" height=\"222.179243\"/>\n",
        "  </clipPath>\n",
        " </defs>\n",
@@ -1144,7 +1144,7 @@
    ],
    "source": [
     "%config InlineBackend.figure_formats = ['svg']\n",
-    "import cotengra as ctg\n",
+    "import cotengra as ctg  # noqa\n",
     "\n",
     "# generate a random contraction\n",
     "inputs, output, shapes, size_dict = ctg.utils.rand_equation(10, 3, n_out=2, seed=4)\n",
@@ -1337,7 +1337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "96586214-c7c8-4fc2-bdb7-f8f011a9f6b3",
    "metadata": {},
    "outputs": [
@@ -1347,7 +1347,7 @@
        "({'b': 1, 'h': 1, 'a': 1, 'k': 1, 'g': 1, 'm': 1, 'o': 1}, 432)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1366,7 +1366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "34474da1-e7c1-4eb0-bd6c-c4d98e068084",
    "metadata": {},
    "outputs": [
@@ -1376,7 +1376,7 @@
        "432"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1387,7 +1387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "43382b1f-c428-40df-acb5-5c2bd6e9e69d",
    "metadata": {},
    "outputs": [
@@ -1397,7 +1397,7 @@
        "'abc,de->abcde'"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1416,7 +1416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "fbb6a4a0-01eb-4d6b-a3de-b0ff434a12c0",
    "metadata": {},
    "outputs": [
@@ -1428,7 +1428,7 @@
        "  frozenset({0, 1, 2, 3, 4}))}"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1442,7 +1442,38 @@
    "id": "a950263b-d13e-430e-91d1-3a40767be94b",
    "metadata": {},
    "source": [
-    "We can compute the flops and any other local information for any nodes that are keys of this. This information is cached in `tree.info`."
+    "We can compute the flops and any other local information for any nodes that are keys of this. This information is cached in `tree.info`.\n",
+    "\n",
+    "You can get all remaining 'incomplete' nodes by calling [`tree.get_incomplete_nodes`](cotengra.core.ContractionTree.get_incomplete_nodes). This returns a dictionary, where each key is a 'childless' node, and each value is the list of 'parentless' nodes that are within its subgraph:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "e804ed26",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{frozenset({0, 1, 2, 3, 4}): [frozenset({2}),\n",
+       "  frozenset({3}),\n",
+       "  frozenset({4}),\n",
+       "  frozenset({0, 1})],\n",
+       " frozenset({5, 6, 7, 8, 9}): [frozenset({5}),\n",
+       "  frozenset({6}),\n",
+       "  frozenset({7}),\n",
+       "  frozenset({8}),\n",
+       "  frozenset({9})]}"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tree.get_incomplete_nodes()"
    ]
   },
   {
@@ -1450,6 +1481,8 @@
    "id": "93bcc9e2-44bb-4917-b6bf-fcebab029f4a",
    "metadata": {},
    "source": [
+    "Each of these 'empty subtrees' needs to be filled in in order to complete the tree.\n",
+    "\n",
     "When calling `contract_nodes` we can actually specify an arbitrary collection of (uncontracted) nodes, these can be seen as the leaves of a subtree which is a mini contraction problem in its own right. Hence the function itself takes the `optimize` kwarg used to specify how to optimize this sub contraction. Here we'll make use of this to complete our tree."
    ]
   },
@@ -7044,7 +7077,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
