update docs and add tree.get_default_objective

--- a/docs/advanced.ipynb
+++ b/docs/advanced.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "62de9546",
    "metadata": {},
    "outputs": [],
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "c01e30da",
    "metadata": {},
    "outputs": [],
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "4169e2b9",
    "metadata": {},
    "outputs": [],
@@ -207,6 +207,41 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9d18ad3e",
+   "metadata": {},
+   "source": [
+    "## **Simulated Annealing** - ``simulated_annealing_opts``\n",
+    "\n",
+    "`cotengra` has an implementation of simulated annealing along the lines of\n",
+    "[arXiv:2108.05665](https://arxiv.org/abs/2108.05665), the core function of which is\n",
+    "[`simulated_anneal_tree`](cotengra.pathfinders.path_simulated_annealing.simulated_anneal_tree).\n",
+    "\n",
+    "You can turn this on by supplying a `dict` to `simulated_annealing_opts`, which\n",
+    "will be supplied as kwargs to the above function:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "a01a27bd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "opt = ctg.HyperOptimizer(simulated_annealing_opts={})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7d88ed1d",
+   "metadata": {},
+   "source": [
+    "There is support for slicing by supplying the `target_size` in this dict.\n",
+    "The simulated anneal is performed *first-thing* after generating the initial \n",
+    "tree, and can still be combined with any of the other processing steps above."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "26715165",
    "metadata": {},
    "source": [
@@ -233,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "f2e2b87d",
    "metadata": {},
    "outputs": [],
@@ -281,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "d0cbf52c",
    "metadata": {},
    "outputs": [],
@@ -303,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "f46ea569",
    "metadata": {},
    "outputs": [],
@@ -339,21 +374,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "4783dffd",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'random_strength': {'type': 'FLOAT_EXP', 'min': 0.01, 'max': 10.0},\n",
-       " 'temperature': {'type': 'FLOAT_EXP', 'min': 0.01, 'max': 10.0},\n",
-       " 'rel_temperature': {'type': 'BOOL'},\n",
-       " 'costmod': {'type': 'FLOAT', 'min': 0.0, 'max': 2.0},\n",
-       " 'usesizes': {'type': 'BOOL'}}"
+       "{'random_strength': {'type': 'FLOAT_EXP', 'min': 0.001, 'max': 1.0},\n",
+       " 'temperature': {'type': 'FLOAT_EXP', 'min': 0.001, 'max': 1.0},\n",
+       " 'costmod': {'type': 'FLOAT', 'min': 0.0, 'max': 50.0}}"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -472,7 +505,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
