update docs, fix get_symbol for large i

--- a/docs/advanced.ipynb
+++ b/docs/advanced.ipynb
@@ -409,6 +409,13 @@
     "- `parallel=False` - no parallelization\n",
     "- `parallel=True` - alias for using default parallelization and number of workers\n",
     "- `parallel=X:int` - alias for using default parallelization but specify number of workers\n",
+    "- `parallel=pool` - supply your own `concurrent.futures.ProcessPoolExecutor` compatible pool\n",
+    "\n",
+    "For non-distributed pools the default number of workers is computed, in order of preference, as:\n",
+    "\n",
+    "1. `COTENGRA_NUM_WORKERS` environment variable\n",
+    "2. `OMP_NUM_THREADS` environment variable\n",
+    "3. `os.cpu_count()`\n",
     "\n",
     "### `parallel='concurrent.futures'` \n",
     "\n",
@@ -449,7 +456,14 @@
     "Consider using `optlib='nevergrad'` or `optlib='random'` if you are optimizing\n",
     "with many tens or more workers to avoid being bottlenecked by the default Bayesian \n",
     "optimization for example.\n",
-    "```"
+    "```\n",
+    "\n",
+    "### `parallel='threads'` \n",
+    "\n",
+    "You can specify a `ThreadPoolExecutor` for parallelization, but this is only\n",
+    "useful tasks where the underlying driver releases the GIL, e.g. \n",
+    "[`RandomGreedyOptimizer`](cotengra.pathfinders.path_basic.RandomGreedyOptimizer),\n",
+    "with `accel=True`, where threads are used by default."
    ]
   },
   {
@@ -486,6 +500,95 @@
     "The [`ReusableHyperOptimizer`](cotengra.core.ReusableHyperOptimizer) on the \n",
     "other hand only runs once.\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e47a6e6f",
+   "metadata": {},
+   "source": [
+    "## Large graphs - `RandomGreedyOptimizer`\n",
+    "\n",
+    "The `HyperOptimizer` can handle medium sizes of graph (up to 1000s of tensors), but the hyper-optimization and explicit `ContractionTree` construction of every trial can become slow for very large contractions. An alternative more suited to very lightweight path finding that can handle 10,000s of tensors is the [`RandomGreedyOptimizer`](cotengra.pathfinders.path_basic.RandomGreedyOptimizer). This only samples random greedy paths whilst simultaneously calculating each flops score, thus avoiding the heavier machinery of the hyper optimizer. Moreover, the core function [`optimize_random_greedy_track_flops`](cotengra.pathfinders.path_basic.optimize_random_greedy_track_flops) has an accelerated rust counterpart in [cotengrust](https://github.com/jcmgray/cotengrust), that is both faster and allows threaded parallelization."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "7d2fe2ce",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "inputs, output, _, size_dict = ctg.utils.lattice_equation([100, 100])\n",
+    "\n",
+    "opt = ctg.RandomGreedyOptimizer(\n",
+    "    max_repeats=32,\n",
+    "    temperature=0.01,\n",
+    "    seed=42,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "39ecfb61",
+   "metadata": {},
+   "source": [
+    "It has the same call methods as all `cotengra` optimizers:\n",
+    "\n",
+    "- `path = opt(inputs, output, size_dict)`: return the best contraction path\n",
+    "- `ssa_path = opt.ssa_path(inputs, output, size_dict)`: return the best contraction path in SSA format\n",
+    "- `tree = opt.search(inputs, output, size_dict)`: return the best `ContractionTree`\n",
+    "\n",
+    "The marginally cheapest of these is the SSA format:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "06d097cd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 3.21 s, sys: 58 ms, total: 3.26 s\n",
+      "Wall time: 613 ms\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "ssa_path = opt.ssa_path(inputs, output, size_dict)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f0040ef5",
+   "metadata": {},
+   "source": [
+    "Once the optimizer has been run, the corresponding flops (log10) can be retrieved with:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "395c2b80",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "65.02261352539062"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "opt.best_flops"
    ]
   }
  ],
