RandomGreedy: sample costmod and temp

--- a/docs/advanced.ipynb
+++ b/docs/advanced.ipynb
@@ -523,7 +523,7 @@
     "\n",
     "opt = ctg.RandomGreedyOptimizer(\n",
     "    max_repeats=32,\n",
-    "    temperature=0.01,\n",
+    "    temperature=(0.01, 0.1),  # sample a range\n",
     "    seed=42,\n",
     ")"
    ]
