add optlib="cmaes" and plot_parameters_parallel

--- a/docs/advanced.ipynb
+++ b/docs/advanced.ipynb
@@ -297,13 +297,12 @@
     "than actually generating the trees themselves. However, for Gaussian process\n",
     "bayesian optimization, for example, the cost can become considerable once a few\n",
     "hundred trials have been fitted. As such, you may want to use a different \n",
-    "library or algorithm. The options are:\n",
+    "library or algorithm. The main options are:\n",
     "\n",
-    "* [optuna](https://github.com/optuna/optuna) - **Tree of Parzen Estimators** used by default\n",
-    "* [baytune](https://github.com/HDI-Project/BTB) - *Bayesian Tuning and Bandits* - **Gaussian Processes** used by default\n",
-    "* [chocolate](https://chocolate.readthedocs.io/en/latest/) - the **CMAES** optimization algorithm is used by default (`sampler='QuasiRandom'` also useful)\n",
-    "* [skopt](https://scikit-optimize.github.io/stable/) - random forest as well as Gaussian process regressors (high quality but slow)\n",
-    "* [nevergrad](https://facebookresearch.github.io/nevergrad/) - various population and evolutionary algorithms (v fast & suitable for highly parallel path findings)"
+    "* [optuna](https://github.com/optuna/optuna) - **Tree of Parzen Estimators** used by default, (high quality but only medium fast)\n",
+    "* [cmaes](https://github.com/CyberAgentAILab/cmaes) - **CMAES** optimization algorithm, (v fast & suitable for highly parallel path findings)\n",
+    "* [nevergrad](https://facebookresearch.github.io/nevergrad/) - various population and evolutionary algorithms (v fast & suitable for highly parallel path findings)\n",
+    "* [skopt](https://scikit-optimize.github.io/stable/) - random forest as well as Gaussian process regressors (very high quality reference but very slow)"
    ]
   },
   {
@@ -321,7 +320,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "opt = ctg.HyperOptimizer(optlib='nevergrad')"
+    "opt = ctg.HyperOptimizer(optlib='cmaes')"
    ]
   },
   {
@@ -453,7 +452,7 @@
     "2. If the underlying optimizer cannot suggest trials quickly enough, or the pre\n",
     "   dispatch is not large enough, workers can become idle.\n",
     "\n",
-    "Consider using `optlib='nevergrad'` or `optlib='random'` if you are optimizing\n",
+    "Consider using `optlib='cmaes'` or `optlib='random'` if you are optimizing\n",
     "with many tens or more workers to avoid being bottlenecked by the default Bayesian \n",
     "optimization for example.\n",
     "```\n",
