--- a/docs/basics.ipynb
+++ b/docs/basics.ipynb
@@ -1931,8 +1931,8 @@
     "    max_repeats=1024,\n",
     "    # use dynamic slicing to target a width of 30\n",
     "    slicing_reconf_opts={'target_size': 2**30},\n",
-    "    # use the nevergrad space searcher - good with large trial budget\n",
-    "    optlib='nevergrad',\n",
+    "    # use the cmaes space searcher - good with large trial budget\n",
+    "    optlib='cmaes',\n",
     "    # terminate search if no change for 128 trials\n",
     "    max_time='equil:128',\n",
     "    # show live progress\n",
