ruff+squeaky formatting of doc notebooks

--- a/docs/advanced.ipynb
+++ b/docs/advanced.ipynb
@@ -7,19 +7,19 @@
    "source": [
     "# Advanced\n",
     "\n",
-    "This page details the more advanced `HyperOptimizer` options. \n",
+    "This page details the more advanced `HyperOptimizer` options.\n",
     "\n",
     "First it might be useful to sketch the underlying process for performing a\n",
     "contraction path search:\n",
     "\n",
-    "1. A driver (such as `'greedy'` or `'kahypar'` ) along with a set of heuristic \n",
+    "1. A driver (such as `'greedy'` or `'kahypar'` ) along with a set of heuristic\n",
     "parameters (the 'hyper-parameters') are sampled from an 'optimizer'.\n",
-    "2. These are used to build a single \n",
+    "2. These are used to build a single\n",
     "[`ContractionTree`](cotengra.core.ContractionTree)\n",
-    "3. Optionally, some modification of this tree is then performed - either \n",
+    "3. Optionally, some modification of this tree is then performed - either\n",
     "slicing, subtree reconfiguration, or some combination such as dynamic slicing\n",
     "4. A score is then generated for the tree, for example the contraction cost\n",
-    "5. This score, the driver and hyper-parameters are fed back to the optimizer to \n",
+    "5. This score, the driver and hyper-parameters are fed back to the optimizer to\n",
     "update its search space\n",
     "6. The process is repeated, optionally in parallel, for a set number of repeats\n",
     "or time, with the best scoring tree being returned finally."
@@ -42,7 +42,7 @@
    "source": [
     "## Drivers\n",
     "\n",
-    "The following are valid initial methods to `HyperOptimizer`(`methods=[...])`, \n",
+    "The following are valid initial methods to `HyperOptimizer`(`methods=[...])`,\n",
     "which will tune each one and ultimately select the best performer:\n",
     "\n",
     "* `'kahypar'` *(default)*\n",
@@ -58,7 +58,7 @@
     "  * `'quickbb'`\n",
     "  * `'flowcutter'`\n",
     "\n",
-    "You can also register your own methods to add to the mix with \n",
+    "You can also register your own methods to add to the mix with\n",
     "[`register_hyper_function`](cotengra.hyper.register_hyper_function)."
    ]
   },
@@ -70,7 +70,7 @@
     "## Slicing and Subtree Reconfiguration\n",
     "\n",
     "There are three types of 'post-processing' of trees that the hyper optimizer\n",
-    "can perform. For details of what each of these does, or how to perform them \n",
+    "can perform. For details of what each of these does, or how to perform them\n",
     "outside of the hyper optimization loop, see the 'Tree Surgery' sections:\n",
     "\n",
     "- [Index Slicing](trees.ipynb#index-slicing)\n",
@@ -80,11 +80,11 @@
     "\n",
     "### **Basic slicing** - ``slicing_opts``\n",
     "\n",
-    "This removes indices from the contraction greedily one by one until the \n",
+    "This removes indices from the contraction greedily one by one until the\n",
     "specified options are met, without changing the tree structure at all. This is cheap\n",
-    "to perform but can incur significant 'slicing overhead' for complicated \n",
-    "contractions. To turn it on supply a `dict` to `slicing_opts`, which will be \n",
-    "supplied as kwargs to \n",
+    "to perform but can incur significant 'slicing overhead' for complicated\n",
+    "contractions. To turn it on supply a `dict` to `slicing_opts`, which will be\n",
+    "supplied as kwargs to\n",
     "[`ContractionTree.slice`](cotengra.core.ContractionTree.slice)"
    ]
   },
@@ -95,7 +95,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "opt = ctg.HyperOptimizer(slicing_opts={'target_size': 2**28})"
+    "opt = ctg.HyperOptimizer(slicing_opts={\"target_size\": 2**28})"
    ]
   },
   {
@@ -103,7 +103,7 @@
    "id": "f0d0418d",
    "metadata": {},
    "source": [
-    "Or if we want paths with at least 1024 independent contractions we could use:\n"
+    "Or if we want paths with at least 1024 independent contractions we could use:"
    ]
   },
   {
@@ -113,7 +113,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "opt = ctg.HyperOptimizer(slicing_opts={'target_slices': 2**10})"
+    "opt = ctg.HyperOptimizer(slicing_opts={\"target_slices\": 2**10})"
    ]
   },
   {
@@ -122,9 +122,9 @@
    "metadata": {},
    "source": [
     "Note that you need to work with the `ContractionTree` object rather than a raw\n",
-    "path (i.e. call `opt.search` or `quimb.tensor.TensorNetwork.contraction_tree`) \n",
-    "if you want to access the sliced indices or perform the sliced contraction \n",
-    "(although a tree reconstructed from the raw path will be 'sliceable' in the \n",
+    "path (i.e. call `opt.search` or `quimb.tensor.TensorNetwork.contraction_tree`)\n",
+    "if you want to access the sliced indices or perform the sliced contraction\n",
+    "(although a tree reconstructed from the raw path will be 'sliceable' in the\n",
     "sense that the indices will be easily refound)."
    ]
   },
@@ -135,13 +135,13 @@
    "source": [
     "### **Dynamic slicing** - ``slicing_reconf_opts``\n",
     "\n",
-    "This removes indices one by one, but also performs subtree reconfiguration \n",
+    "This removes indices one by one, but also performs subtree reconfiguration\n",
     "between removals in order to modify the tree to take account of the slicing.\n",
-    "Slower than basic slicing but can be much higher quality, especially when \n",
-    "slicing many indices of a complicated contraction. This is turned on by \n",
-    "supplying a `dict` to `slicing_reconf_opts`, which will be supplied as kwargs to \n",
+    "Slower than basic slicing but can be much higher quality, especially when\n",
+    "slicing many indices of a complicated contraction. This is turned on by\n",
+    "supplying a `dict` to `slicing_reconf_opts`, which will be supplied as kwargs to\n",
     "[`ContractionTree.slice_and_reconfigure`](cotengra.core.ContractionTree.slice_and_reconfigure).\n",
-    "If both basic and dynamic slicing are specified then the basic slicing is \n",
+    "If both basic and dynamic slicing are specified then the basic slicing is\n",
     "performed first."
    ]
   },
@@ -152,7 +152,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "opt = ctg.HyperOptimizer(slicing_reconf_opts={'target_size': 2**28})"
+    "opt = ctg.HyperOptimizer(slicing_reconf_opts={\"target_size\": 2**28})"
    ]
   },
   {
@@ -163,9 +163,9 @@
     "### **Subtree reconfiguration** - ``reconf_opts``\n",
     "\n",
     "Finally, one can perform subtree reconfiguration alone - ranging over subtrees\n",
-    "of the main tree optimally reconfiguring them locally to lower the target \n",
+    "of the main tree optimally reconfiguring them locally to lower the target\n",
     "score globally. This is turned on by supplying a `dict` to `reconf_opts`, which\n",
-    "will be supplied as kwargs to \n",
+    "will be supplied as kwargs to\n",
     "[`ContractionTree.subtree_reconfigure`](cotengra.core.ContractionTree.subtree_reconfigure).\n",
     "The 'reconfing' will be performed after any slicing."
    ]
@@ -236,7 +236,7 @@
    "metadata": {},
    "source": [
     "There is support for slicing by supplying the `target_size` in this dict.\n",
-    "The simulated anneal is performed *first-thing* after generating the initial \n",
+    "The simulated anneal is performed *first-thing* after generating the initial\n",
     "tree, and can still be combined with any of the other processing steps above."
    ]
   },
@@ -250,11 +250,11 @@
     "What the optimizer (and subtree reconfiguration) considers the 'best' tree or\n",
     "objective function is set with the `minimize` kwarg.\n",
     "\n",
-    "* `minimize='flops'` - minimize the total number of scalar operations, \n",
+    "* `minimize='flops'` - minimize the total number of scalar operations,\n",
     "* `minimize='size'` - minimize the size of the largest intermediate tensor,\n",
     "\n",
     "```{hint}\n",
-    "Generally to control the memory usage of a contraction it is better to use \n",
+    "Generally to control the memory usage of a contraction it is better to use\n",
     "slicing rather than targetting the size directly.\n",
     "```\n",
     "\n",
@@ -262,7 +262,7 @@
     "* `minimize='combo'` - minimize the sum of $FLOPS + \\alpha \\times WRITE$ using the default $\\alpha=64$\n",
     "* `minimize=f'combo-{alpha}'` - use a custom $\\alpha$ for the combo cost\n",
     "\n",
-    "For real world contractions, where both clock speed \n",
+    "For real world contractions, where both clock speed\n",
     "and memory speed are important, using:"
    ]
   },
@@ -273,7 +273,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "opt = ctg.HyperOptimizer(minimize='combo')"
+    "opt = ctg.HyperOptimizer(minimize=\"combo\")"
    ]
   },
   {
@@ -291,12 +291,12 @@
    "source": [
     "## Optimization Library\n",
     "\n",
-    "Optimizing the hyper parameters of the drivers which generate trees is done by \n",
+    "Optimizing the hyper parameters of the drivers which generate trees is done by\n",
     "one of many backend 'ask-and-tell' optimization libraries. The cost of asking\n",
-    "for a new sample point and telling the resulting score should be much smaller \n",
+    "for a new sample point and telling the resulting score should be much smaller\n",
     "than actually generating the trees themselves. However, for Gaussian process\n",
     "bayesian optimization, for example, the cost can become considerable once a few\n",
-    "hundred trials have been fitted. As such, you may want to use a different \n",
+    "hundred trials have been fitted. As such, you may want to use a different\n",
     "library or algorithm. The main options are:\n",
     "\n",
     "* [optuna](https://github.com/optuna/optuna) - **Tree of Parzen Estimators** used by default, (high quality but only medium fast)\n",
@@ -320,7 +320,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "opt = ctg.HyperOptimizer(optlib='cmaes')"
+    "opt = ctg.HyperOptimizer(optlib=\"cmaes\")"
    ]
   },
   {
@@ -342,7 +342,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "opt = ctg.HyperOptimizer(optlib='random')"
+    "opt = ctg.HyperOptimizer(optlib=\"random\")"
    ]
   },
   {
@@ -358,8 +358,7 @@
    "id": "1e275f56",
    "metadata": {},
    "source": [
-    "### Optimization Space\n",
-    "\n"
+    "### Optimization Space"
    ]
   },
   {
@@ -391,7 +390,7 @@
     }
    ],
    "source": [
-    "ctg.get_hyper_space()['greedy']"
+    "ctg.get_hyper_space()[\"greedy\"]"
    ]
   },
   {
@@ -401,7 +400,7 @@
    "source": [
     "## Parallelization\n",
     "\n",
-    "`cotengra` can fairly naturally parallelize over the trials of the hyper \n",
+    "`cotengra` can fairly naturally parallelize over the trials of the hyper\n",
     "optimization, and does so by default `HyperOptimizer(parallel='auto')`.\n",
     "The basic `parallel` options are:\n",
     "\n",
@@ -416,25 +415,25 @@
     "2. `OMP_NUM_THREADS` environment variable\n",
     "3. `os.cpu_count()`\n",
     "\n",
-    "### `parallel='concurrent.futures'` \n",
+    "### `parallel='concurrent.futures'`\n",
     "\n",
     "The default parallelization is the python [standard library](https://docs.python.org/3/library/concurrent.futures.html).\n",
     "A cached `ProcessPoolExecutor` is used.\n",
-    "    \n",
-    "### `parallel='loky'` \n",
     "\n",
-    "Use the [`loky`](https://loky.readthedocs.io/) (also fallback to \n",
-    "`joblib.externals.loky`) reusable pool. \n",
+    "### `parallel='loky'`\n",
     "\n",
-    "### `parallel='dask'` \n",
+    "Use the [`loky`](https://loky.readthedocs.io/) (also fallback to\n",
+    "`joblib.externals.loky`) reusable pool.\n",
+    "\n",
+    "### `parallel='dask'`\n",
     "\n",
     "Use the [`dask`](https://dask.org/) distributed scheduler. If a `dask.distributed.Client`\n",
     "already exists then it will be used, otherwise a new one will be created. You can\n",
     "also supply a `dask.distributed.Client` object directly.\n",
     "\n",
-    "### `parallel='ray'` \n",
+    "### `parallel='ray'`\n",
     "\n",
-    "Use the [`ray`](https://ray.readthedocs.io/) distributed scheduler, with \n",
+    "Use the [`ray`](https://ray.readthedocs.io/) distributed scheduler, with\n",
     "potentially better performance than `dask`. A `ray` runtime will be created if\n",
     "not already running.\n",
     "\n",
@@ -447,20 +446,20 @@
     "```{warning}\n",
     "There are two caveats to parallelization to consider:\n",
     "\n",
-    "1. Since trials have to be pre dispatched, a delay is introduced between \n",
+    "1. Since trials have to be pre dispatched, a delay is introduced between\n",
     "   sampling and reporting trials to the underlying optimizer\n",
     "2. If the underlying optimizer cannot suggest trials quickly enough, or the pre\n",
     "   dispatch is not large enough, workers can become idle.\n",
     "\n",
     "Consider using `optlib='cmaes'` or `optlib='random'` if you are optimizing\n",
-    "with many tens or more workers to avoid being bottlenecked by the default Bayesian \n",
+    "with many tens or more workers to avoid being bottlenecked by the default Bayesian\n",
     "optimization for example.\n",
     "```\n",
     "\n",
-    "### `parallel='threads'` \n",
+    "### `parallel='threads'`\n",
     "\n",
     "You can specify a `ThreadPoolExecutor` for parallelization, but this is only\n",
-    "useful tasks where the underlying driver releases the GIL, e.g. \n",
+    "useful tasks where the underlying driver releases the GIL, e.g.\n",
     "[`RandomGreedyOptimizer`](cotengra.pathfinders.path_basic.RandomGreedyOptimizer),\n",
     "with `accel=True`, where threads are used by default."
    ]
@@ -472,31 +471,31 @@
    "source": [
     "## Termination\n",
     "\n",
-    "The [`HyperOptimizer`](cotengra.core.HyperOptimizer) can be terminated in \n",
+    "The [`HyperOptimizer`](cotengra.core.HyperOptimizer) can be terminated in\n",
     "several ways.\n",
     "\n",
-    "- `max_repeats=X:int` - terminate after this many trees have been generated. \n",
-    "  The default of 128 is reasonable for simple to moderatetely complex \n",
+    "- `max_repeats=X:int` - terminate after this many trees have been generated.\n",
+    "  The default of 128 is reasonable for simple to moderatetely complex\n",
     "  contractions using a Bayesian optimizer.\n",
     "- `max_time=T` - terminate after `T` seconds have elapsed\n",
-    "- `max_time=f'rate:{ops_per_second}'` - terminate once the time taken searching \n",
-    "  is greater than if the best contraction found so far was performed at the \n",
-    "  rate `ops_per_second`. This can be used to avoid spending a long time on \n",
-    "  cheap contractions. If the contraction will be performed many times, divide \n",
+    "- `max_time=f'rate:{ops_per_second}'` - terminate once the time taken searching\n",
+    "  is greater than if the best contraction found so far was performed at the\n",
+    "  rate `ops_per_second`. This can be used to avoid spending a long time on\n",
+    "  cheap contractions. If the contraction will be performed many times, divide\n",
     "  the  rate by the commensurate factor. For example, if we have a CPU with very\n",
-    "  approximately a billion OPS/s but we expect to perform the contraction a \n",
+    "  approximately a billion OPS/s but we expect to perform the contraction a\n",
     "  hundred times we could use `max_time='rate:1e7'`.\n",
-    "- `max_time='equil:{X:int}'` - terminate if no better contraction has been \n",
+    "- `max_time='equil:{X:int}'` - terminate if no better contraction has been\n",
     "  found in the last `X` trials. This can be used to avoid spending a long time\n",
     "  on a contraction that is already converged.\n",
     "\n",
     "\n",
-    "Note that the [`HyperOptimizer`](cotengra.core.HyperOptimizer) is stateful; \n",
-    "each time it is supplied to the same contraction it will reset the above \n",
+    "Note that the [`HyperOptimizer`](cotengra.core.HyperOptimizer) is stateful;\n",
+    "each time it is supplied to the same contraction it will reset the above\n",
     "conditions and continue.\n",
     "\n",
     "```{hint}\n",
-    "The [`ReusableHyperOptimizer`](cotengra.core.ReusableHyperOptimizer) on the \n",
+    "The [`ReusableHyperOptimizer`](cotengra.core.ReusableHyperOptimizer) on the\n",
     "other hand only runs once.\n",
     "```"
    ]
@@ -593,7 +592,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -607,7 +606,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3"
   }
  },
  "nbformat": 4,
