--- a/docs/examples/ex_compressed_contraction.ipynb
+++ b/docs/examples/ex_compressed_contraction.ipynb
@@ -42,9 +42,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tn = qtn.TN3D_classical_ising_partition_function(\n",
-    "    10, 10, 10, beta=0.3\n",
-    ")"
+    "tn = qtn.TN3D_classical_ising_partition_function(10, 10, 10, beta=0.3)"
    ]
   },
   {
@@ -66,7 +64,7 @@
     "copt = ctg.ReusableHyperCompressedOptimizer(\n",
     "    chi,\n",
     "    max_repeats=256,\n",
-    "    minimize='combo-compressed',\n",
+    "    minimize=\"combo-compressed\",\n",
     "    progbar=True,\n",
     "    # # save paths to disk:\n",
     "    # directory=True\n",
@@ -185,10 +183,10 @@
     "tree.plot_span(\n",
     "    node_max_size=1,\n",
     "    edge_max_width=1,\n",
-    "    edge_color='order',\n",
-    "    node_color='order',\n",
-    "    edge_colormap='Spectral_r',\n",
-    "    node_colormap='Spectral_r',\n",
+    "    edge_color=\"order\",\n",
+    "    node_color=\"order\",\n",
+    "    edge_colormap=\"Spectral_r\",\n",
+    "    node_colormap=\"Spectral_r\",\n",
     "    colorbars=False,\n",
     ")"
    ]
@@ -211,7 +209,8 @@
     "def to_backend(x):\n",
     "    import torch\n",
     "\n",
-    "    return torch.tensor(x, dtype=torch.float32, device='cuda')\n",
+    "    return torch.tensor(x, dtype=torch.float32, device=\"cuda\")\n",
+    "\n",
     "\n",
     "tn.apply_to_arrays(to_backend)"
    ]
@@ -310,9 +309,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tn = qtn.TN3D_classical_ising_partition_function(\n",
-    "    10, 10, 10, beta=0.25\n",
-    ")\n",
+    "tn = qtn.TN3D_classical_ising_partition_function(10, 10, 10, beta=0.25)\n",
     "tn.apply_to_arrays(to_backend)"
    ]
   },
