--- a/docs/examples/ex_trace_contraction_to_matmuls.ipynb
+++ b/docs/examples/ex_trace_contraction_to_matmuls.ipynb
@@ -5,6 +5,8 @@
    "id": "551a15b6",
    "metadata": {},
    "source": [
+    "(ex_extract_contraction)=\n",
+    "\n",
     "# Extract contraction to matmuls only"
    ]
   },
@@ -81,7 +83,9 @@
     }
    ],
    "source": [
-    "tree = ctg.array_contract_tree(inputs, output, shapes=shapes, optimize=\"optimal\")\n",
+    "tree = ctg.array_contract_tree(\n",
+    "    inputs, output, shapes=shapes, optimize=\"optimal\"\n",
+    ")\n",
     "tree.get_hypergraph().plot()"
    ]
   },
@@ -165,7 +169,7 @@
     "    variables,\n",
     "    # make cotengra use its own implementation of einsum/tensordot\n",
     "    # which breaks things down to bmm / reshape / transpose\n",
-    "    implementation=\"cotengra\"\n",
+    "    implementation=\"cotengra\",\n",
     ")"
    ]
   },
