add missing docs ref

--- a/docs/basics.ipynb
+++ b/docs/basics.ipynb
@@ -736,7 +736,7 @@
    "id": "d6d3e4be",
    "metadata": {},
    "source": [
-    "An even faster option if one doesn't need slicing or to specific the `minimize` objective function is the `ReusableRandomGreedyOptimizer` which still provides good results but can run extremely quickly (especially if `cotengrust` is installed):"
+    "An even faster option if one doesn't need slicing or to specific the `minimize` objective function is the [`ReusableRandomGreedyOptimizer`](ctg.ReusableRandomGreedyOptimizer) which still provides good results but can run extremely quickly (especially if `cotengrust` is installed):"
    ]
   },
   {
